--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="container banner-container">
         <div class="row">
             <div class="col banner-info">
-                <div>
+                <div  class="text-center">
                     <h1>I'm <span>Sriram!</span> </h1>
-                    <p>To secure a responsible career opportunity to fully utilize my training and skills while, making a significant contribution to the success of the company.  </p>
+                    <p>a <span>pro</span>grammar , App <span>Dev</span>eloper and Computer Science <span>Eng</span>ineer and <span>Web</span> Enthusiast!</p>
                 </div>
             </div>
             <!-- <div class="col banner-img">
@@ -146,13 +146,13 @@
 			
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block img-fluid w-100" src="./AC.jpg" alt="">
+					<img class="d-block img-fluid w-50   m-auto" src="./AC.jpg" alt="">
 					<div class="carousel-caption d-none d-md-block">
 						<h1>Automated Chatbot</h1>
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="d-block img-fluid" src="./RE.jpg" alt="">
+					<img class="d-block img-fluid w-50 m-auto" src="./RE.jpg" alt="">
 					<div class="carousel-caption d-none d-md-block">
 						<h3>GoRenuable application</h3>
 						<!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci esse vitae exercitationem fugit, numquam minus!</p> -->
@@ -178,7 +178,7 @@
       <div class="container p-5 text-center">
         <h1>Get in Touch</h1>
        <form action="mailto:srirammekala01@gmail.com">
-            <input type="submit" value="Contact Me">
+            <input type="submit" value="Mail Me">
 
 
           </form>
