contact section update

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           
           <div class="col">
               <ul class="d-flex justify-content-center">
-                <li class="nav-link"><a href="#home active" class="link">Home</a></li>
+                <li class="nav-link"><a href="#home" class="link active">Home</a></li>
                 <li class="nav-link"><a href="#about" class="link">About</a></li>
                 <li class="nav-link"><a href="#skills" class="link">Skills</a></li>
                 <li class="nav-link"><a href="#projects" class="link">Projects</a></li>
@@ -182,6 +182,8 @@
 
 
           </form>
+
+          <p><i class="fa fa-copyright" aria-hidden="true"></i>Copyrights 2021 Sriram Mekala</p>
         </div>
     </div>
   </section>
